--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 12:05:04 2018</p>
+         Last Run: Sun Jul 22 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -33,24 +33,24 @@
                         <td>Mostly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>3</td>
-                        <td>44</td>
+                        <td>2</td>
+                        <td>45</td>
                         <td>1</td>
                         <td>13</td>
                         <td>NNE</td>
-                        <td>63</td>
+                        <td>65</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>18</td>
                         <td>18</td>
-                        <td>3</td>
-                        <td>46</td>
+                        <td>2</td>
+                        <td>47</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>NE</td>
-                        <td>56</td>
+                        <td>NNE</td>
+                        <td>55</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -58,11 +58,11 @@
                         <td>16</td>
                         <td>16</td>
                         <td>3</td>
-                        <td>54</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
-                        <td>46</td>
+                        <td>45</td>
                      </tr>
                   </tbody>
                </table>
@@ -170,8 +170,8 @@
                "strokeColor":"rgba(0,0,255,1)",
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
-                 "3",
-                 "3",
+                 "2",
+                 "2",
                  "3"
                ]
              },
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "44",
-                 "46",
-                 "54"
+                 "45",
+                 "47",
+                 "55"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "63",
-                 "56",
-                 "46"
+                 "65",
+                 "55",
+                 "45"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 12:05:04 2018</p>
+         Last Run: Sun Jul 22 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -230,63 +230,63 @@
                   <tbody>
                      <tr>
                         <td>06:00 PM</td>
-                        <td>Partly Cloudy</td>
+                        <td>Mostly Cloudy</td>
+                        <td>21</td>
+                        <td>21</td>
+                        <td>0</td>
+                        <td>40</td>
+                        <td>2</td>
+                        <td>11</td>
+                        <td>SE</td>
+                        <td>63</td>
+                     </tr>
+                     <tr>
+                        <td>07:00 PM</td>
+                        <td>Mostly Cloudy</td>
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
                         <td>41</td>
-                        <td>2</td>
-                        <td>11</td>
-                        <td>ESE</td>
-                        <td>44</td>
-                     </tr>
-                     <tr>
-                        <td>07:00 PM</td>
-                        <td>Partly Cloudy</td>
-                        <td>21</td>
-                        <td>21</td>
-                        <td>0</td>
-                        <td>42</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>35</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Clear</td>
+                        <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>0</td>
+                        <td>6</td>
                         <td>44</td>
                         <td>0</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>22</td>
+                        <td>52</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
-                        <td>Clear</td>
-                        <td>18</td>
-                        <td>18</td>
-                        <td>3</td>
-                        <td>52</td>
+                        <td>Chance of a Thunderstorm</td>
+                        <td>17</td>
+                        <td>17</td>
+                        <td>35</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
-                        <td>E</td>
-                        <td>12</td>
+                        <td>ESE</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
-                        <td>Clear</td>
+                        <td>Chance of a Thunderstorm</td>
                         <td>15</td>
                         <td>15</td>
-                        <td>21</td>
+                        <td>38</td>
                         <td>63</td>
                         <td>0</td>
-                        <td>8</td>
-                        <td>E</td>
-                        <td>11</td>
+                        <td>10</td>
+                        <td>ESE</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -335,7 +335,7 @@
                  "21",
                  "21",
                  "20",
-                 "18",
+                 "17",
                  "15"
                ]
              },
@@ -348,7 +348,7 @@
                  "21",
                  "21",
                  "20",
-                 "18",
+                 "17",
                  "15"
                ]
              }
@@ -404,9 +404,9 @@
                "data":[
                  "0",
                  "0",
-                 "0",
-                 "3",
-                 "21"
+                 "6",
+                 "35",
+                 "38"
                ]
              },
              {
@@ -414,10 +414,10 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
+                 "40",
                  "41",
-                 "42",
                  "44",
-                 "52",
+                 "53",
                  "63"
                ]
              },
@@ -426,11 +426,11 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "44",
-                 "35",
-                 "22",
-                 "12",
-                 "11"
+                 "63",
+                 "63",
+                 "52",
+                 "50",
+                 "50"
                ]
              }
            ]
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 12:05:04 2018</p>
+         Last Run: Sun Jul 22 13:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -469,21 +469,21 @@
                      <tr>
                         <td>11:00 AM</td>
                         <td>Clear</td>
-                        <td>25</td>
-                        <td>25</td>
+                        <td>24</td>
+                        <td>24</td>
                         <td>0</td>
-                        <td>34</td>
+                        <td>33</td>
                         <td>4</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WNW</td>
                         <td>1</td>
                      </tr>
                      <tr>
                         <td>12:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
-                        <td>2</td>
+                        <td>26</td>
+                        <td>26</td>
+                        <td>0</td>
                         <td>28</td>
                         <td>5</td>
                         <td>8</td>
@@ -495,36 +495,36 @@
                         <td>Clear</td>
                         <td>28</td>
                         <td>28</td>
-                        <td>2</td>
-                        <td>25</td>
+                        <td>0</td>
+                        <td>24</td>
                         <td>6</td>
                         <td>8</td>
-                        <td>W</td>
+                        <td>WNW</td>
                         <td>2</td>
                      </tr>
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>29</td>
-                        <td>29</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
                         <td>23</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>NNE</td>
-                        <td>3</td>
+                        <td>N</td>
+                        <td>4</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>29</td>
-                        <td>29</td>
-                        <td>19</td>
-                        <td>22</td>
+                        <td>28</td>
+                        <td>28</td>
+                        <td>7</td>
+                        <td>23</td>
                         <td>6</td>
                         <td>11</td>
                         <td>N</td>
-                        <td>4</td>
+                        <td>6</td>
                      </tr>
                   </tbody>
                </table>
@@ -570,11 +570,11 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
-                 "25",
-                 "27",
+                 "24",
+                 "26",
                  "28",
-                 "29",
-                 "29"
+                 "28",
+                 "28"
                ]
              },
              {
@@ -583,11 +583,11 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
-                 "25",
-                 "27",
+                 "24",
+                 "26",
                  "28",
-                 "29",
-                 "29"
+                 "28",
+                 "28"
                ]
              }
            ]
@@ -641,10 +641,10 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "0",
-                 "2",
-                 "2",
                  "0",
-                 "19"
+                 "0",
+                 "0",
+                 "7"
                ]
              },
              {
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "34",
+                 "33",
                  "28",
-                 "25",
+                 "24",
                  "23",
-                 "22"
+                 "23"
                ]
              },
              {
@@ -667,8 +667,8 @@
                  "1",
                  "2",
                  "2",
-                 "3",
-                 "4"
+                 "4",
+                 "6"
                ]
              }
            ]
