--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 15:05:04 2018</p>
+         Last Run: Sun Jul 22 16:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,31 +34,31 @@
                         <td>18</td>
                         <td>18</td>
                         <td>24</td>
-                        <td>49</td>
+                        <td>50</td>
                         <td>1</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>NNE</td>
-                        <td>70</td>
+                        <td>69</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Mostly Cloudy</td>
-                        <td>17</td>
-                        <td>17</td>
-                        <td>22</td>
-                        <td>51</td>
+                        <td>18</td>
+                        <td>18</td>
+                        <td>20</td>
+                        <td>52</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>64</td>
+                        <td>63</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>15</td>
-                        <td>15</td>
-                        <td>7</td>
-                        <td>59</td>
+                        <td>16</td>
+                        <td>16</td>
+                        <td>5</td>
+                        <td>58</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
@@ -107,8 +107,8 @@
                "fillColor":"rgba(92,0,141,0)",
                "data":[
                  "18",
-                 "17",
-                 "15"
+                 "18",
+                 "16"
                ]
              },
              {
@@ -118,8 +118,8 @@
                "fillColor":"rgba(252,49,18,0)",
                "data":[
                  "18",
-                 "17",
-                 "15"
+                 "18",
+                 "16"
                ]
              }
            ]
@@ -171,8 +171,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "22",
-                 "7"
+                 "20",
+                 "5"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "49",
-                 "51",
-                 "59"
+                 "50",
+                 "52",
+                 "58"
                ]
              },
              {
@@ -190,8 +190,8 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "70",
-                 "64",
+                 "69",
+                 "63",
                  "54"
                ]
              }
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 15:05:04 2018</p>
+         Last Run: Sun Jul 22 16:05:16 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -234,11 +234,11 @@
                         <td>21</td>
                         <td>21</td>
                         <td>0</td>
-                        <td>41</td>
+                        <td>42</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>36</td>
+                        <td>37</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -246,35 +246,35 @@
                         <td>20</td>
                         <td>20</td>
                         <td>0</td>
-                        <td>42</td>
+                        <td>43</td>
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>43</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>20</td>
                         <td>20</td>
-                        <td>5</td>
+                        <td>6</td>
                         <td>46</td>
                         <td>0</td>
-                        <td>13</td>
+                        <td>11</td>
                         <td>ESE</td>
-                        <td>44</td>
+                        <td>41</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Chance of a Thunderstorm</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>34</td>
-                        <td>56</td>
+                        <td>35</td>
+                        <td>55</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>44</td>
+                        <td>50</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -282,7 +282,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>38</td>
-                        <td>67</td>
+                        <td>65</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -404,8 +404,8 @@
                "data":[
                  "0",
                  "0",
-                 "5",
-                 "34",
+                 "6",
+                 "35",
                  "38"
                ]
              },
@@ -414,11 +414,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "41",
                  "42",
+                 "43",
                  "46",
-                 "56",
-                 "67"
+                 "55",
+                 "65"
                ]
              },
              {
@@ -426,10 +426,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "36",
-                 "43",
-                 "44",
-                 "44",
+                 "37",
+                 "41",
+                 "41",
+                 "50",
                  "50"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 15:05:04 2018</p>
+         Last Run: Sun Jul 22 16:05:17 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -472,10 +472,10 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>4</td>
-                        <td>8</td>
-                        <td>NW</td>
+                        <td>10</td>
+                        <td>WNW</td>
                         <td>1</td>
                      </tr>
                      <tr>
@@ -484,7 +484,7 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>28</td>
                         <td>5</td>
                         <td>8</td>
                         <td>NW</td>
@@ -493,8 +493,8 @@
                      <tr>
                         <td>01:00 PM</td>
                         <td>Clear</td>
-                        <td>27</td>
-                        <td>27</td>
+                        <td>28</td>
+                        <td>28</td>
                         <td>0</td>
                         <td>25</td>
                         <td>6</td>
@@ -508,7 +508,7 @@
                         <td>28</td>
                         <td>28</td>
                         <td>0</td>
-                        <td>24</td>
+                        <td>23</td>
                         <td>7</td>
                         <td>10</td>
                         <td>N</td>
@@ -520,7 +520,7 @@
                         <td>28</td>
                         <td>28</td>
                         <td>2</td>
-                        <td>24</td>
+                        <td>23</td>
                         <td>6</td>
                         <td>10</td>
                         <td>NNW</td>
@@ -572,7 +572,7 @@
                "data":[
                  "24",
                  "26",
-                 "27",
+                 "28",
                  "28",
                  "28"
                ]
@@ -585,7 +585,7 @@
                "data":[
                  "24",
                  "26",
-                 "27",
+                 "28",
                  "28",
                  "28"
                ]
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
-                 "29",
+                 "34",
+                 "28",
                  "25",
-                 "24",
-                 "24"
+                 "23",
+                 "23"
                ]
              },
              {
