--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 17:05:04 2018</p>
+         Last Run: Sun Jul 22 18:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Academy - Andrew Sibbald School</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Tuesday Jul 24, 2018 -  7:30PM til  9:00PM</H4>
                <table class="table table-striped">
@@ -34,35 +34,35 @@
                         <td>18</td>
                         <td>18</td>
                         <td>24</td>
-                        <td>50</td>
+                        <td>51</td>
                         <td>1</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>69</td>
+                        <td>68</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
-                        <td>Mostly Cloudy</td>
+                        <td>Partly Cloudy</td>
                         <td>17</td>
                         <td>17</td>
-                        <td>20</td>
-                        <td>52</td>
+                        <td>21</td>
+                        <td>53</td>
                         <td>0</td>
                         <td>11</td>
                         <td>NNE</td>
-                        <td>64</td>
+                        <td>57</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
                         <td>Partly Cloudy</td>
                         <td>16</td>
                         <td>16</td>
-                        <td>4</td>
-                        <td>59</td>
+                        <td>6</td>
+                        <td>60</td>
                         <td>0</td>
                         <td>10</td>
                         <td>NNE</td>
-                        <td>56</td>
+                        <td>50</td>
                      </tr>
                   </tbody>
                </table>
@@ -171,8 +171,8 @@
                "fillColor":"rgba(0,0,255,0.5)",
                "data":[
                  "24",
-                 "20",
-                 "4"
+                 "21",
+                 "6"
                ]
              },
              {
@@ -180,9 +180,9 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "50",
-                 "52",
-                 "59"
+                 "51",
+                 "53",
+                 "60"
                ]
              },
              {
@@ -190,9 +190,9 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "69",
-                 "64",
-                 "56"
+                 "68",
+                 "57",
+                 "50"
                ]
              }
            ]
@@ -209,7 +209,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 17:05:04 2018</p>
+         Last Run: Sun Jul 22 18:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Beach Night - Lake Bonaventure South Gate Entrance</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Wednesday Jul 25, 2018 -  6:30PM til  9:30PM</H4>
                <table class="table table-striped">
@@ -231,14 +231,14 @@
                      <tr>
                         <td>06:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>20</td>
-                        <td>20</td>
+                        <td>21</td>
+                        <td>21</td>
                         <td>0</td>
                         <td>42</td>
                         <td>2</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>37</td>
+                        <td>36</td>
                      </tr>
                      <tr>
                         <td>07:00 PM</td>
@@ -250,19 +250,19 @@
                         <td>1</td>
                         <td>13</td>
                         <td>ESE</td>
-                        <td>43</td>
+                        <td>42</td>
                      </tr>
                      <tr>
                         <td>08:00 PM</td>
                         <td>Partly Cloudy</td>
-                        <td>19</td>
-                        <td>19</td>
+                        <td>20</td>
+                        <td>20</td>
                         <td>5</td>
                         <td>46</td>
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>42</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>09:00 PM</td>
@@ -274,7 +274,7 @@
                         <td>0</td>
                         <td>11</td>
                         <td>ESE</td>
-                        <td>42</td>
+                        <td>43</td>
                      </tr>
                      <tr>
                         <td>10:00 PM</td>
@@ -282,7 +282,7 @@
                         <td>15</td>
                         <td>15</td>
                         <td>38</td>
-                        <td>65</td>
+                        <td>66</td>
                         <td>0</td>
                         <td>10</td>
                         <td>ESE</td>
@@ -332,9 +332,9 @@
                "pointColor":"rgba(92,0,141,1)",
                "fillColor":"rgba(92,0,141,0)",
                "data":[
+                 "21",
                  "20",
                  "20",
-                 "19",
                  "17",
                  "15"
                ]
@@ -345,9 +345,9 @@
                "pointColor":"rgba(252,49,18,1)",
                "fillColor":"rgba(252,49,18,0)",
                "data":[
+                 "21",
                  "20",
                  "20",
-                 "19",
                  "17",
                  "15"
                ]
@@ -418,7 +418,7 @@
                  "43",
                  "46",
                  "55",
-                 "65"
+                 "66"
                ]
              },
              {
@@ -426,10 +426,10 @@
                "strokeColor":"rgba(233,37,255,1)",
                "fillColor":"rgba(233,37,255,0.5)",
                "data":[
-                 "37",
+                 "36",
+                 "42",
                  "43",
-                 "42",
-                 "42",
+                 "43",
                  "50"
                ]
              }
@@ -447,7 +447,7 @@
       <div style="padding:10px;border: 1px none black">
          <p style="color:rgb(140,140,140)" class="text-center"><a href = "https://www.wunderground.com/?apiref=b04849edbe8b2369">
          <img class="img-responsive center-block" src="https://icons.wxug.com/logos/JPG/wundergroundLogo_4c_horz.jpg" alt="" width="180"></a>
-         Last Run: Sun Jul 22 17:05:04 2018</p>
+         Last Run: Sun Jul 22 18:05:04 2018</p>
                <H1 style="color:rgb(0,0,0)" class="text-center">Game vs. CNS Fiore - Foothills 4</H1>
                <H4 style="color:rgb(140,140,140)" class="text-center">Saturday Jul 28, 2018 - 12:30PM til  3:00PM</H4>
                <table class="table table-striped">
@@ -472,9 +472,9 @@
                         <td>24</td>
                         <td>24</td>
                         <td>0</td>
-                        <td>35</td>
+                        <td>34</td>
                         <td>4</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>WNW</td>
                         <td>1</td>
                      </tr>
@@ -484,9 +484,9 @@
                         <td>26</td>
                         <td>26</td>
                         <td>0</td>
-                        <td>29</td>
+                        <td>28</td>
                         <td>5</td>
-                        <td>8</td>
+                        <td>10</td>
                         <td>NW</td>
                         <td>1</td>
                      </tr>
@@ -496,7 +496,7 @@
                         <td>27</td>
                         <td>27</td>
                         <td>0</td>
-                        <td>26</td>
+                        <td>25</td>
                         <td>6</td>
                         <td>8</td>
                         <td>NW</td>
@@ -505,24 +505,24 @@
                      <tr>
                         <td>02:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
+                        <td>27</td>
+                        <td>27</td>
                         <td>0</td>
                         <td>24</td>
                         <td>7</td>
                         <td>10</td>
-                        <td>N</td>
+                        <td>NNW</td>
                         <td>3</td>
                      </tr>
                      <tr>
                         <td>03:00 PM</td>
                         <td>Clear</td>
-                        <td>28</td>
-                        <td>28</td>
-                        <td>3</td>
-                        <td>24</td>
+                        <td>27</td>
+                        <td>27</td>
+                        <td>4</td>
+                        <td>23</td>
                         <td>6</td>
-                        <td>10</td>
+                        <td>11</td>
                         <td>NNW</td>
                         <td>5</td>
                      </tr>
@@ -573,8 +573,8 @@
                  "24",
                  "26",
                  "27",
-                 "28",
-                 "28"
+                 "27",
+                 "27"
                ]
              },
              {
@@ -586,8 +586,8 @@
                  "24",
                  "26",
                  "27",
-                 "28",
-                 "28"
+                 "27",
+                 "27"
                ]
              }
            ]
@@ -644,7 +644,7 @@
                  "0",
                  "0",
                  "0",
-                 "3"
+                 "4"
                ]
              },
              {
@@ -652,11 +652,11 @@
                "strokeColor":"rgba(40,177,255,1)",
                "fillColor":"rgba(40,177,255,0.5)",
                "data":[
-                 "35",
-                 "29",
-                 "26",
+                 "34",
+                 "28",
+                 "25",
                  "24",
-                 "24"
+                 "23"
                ]
              },
              {
